try fix on mobile footer behind bar

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -32,6 +32,8 @@ body {
 	background-size: 100vw 100vh;
 }
 
+html, body { height: 100% } 
+
 h1,
 h2,
 p {
